uoproxy (0.1.1) unstable; urgency=low

  * corrected the getopt string
  * remember equip packets
  * parse encoded speech
  * new command "%drop" which drops the item currently held
  * bugfix: serials are in network byte order
  * read equipment list from mobile_incoming packet
  * handle container packets: open, update, content

 --

uoproxy (0.1.0) unstable; urgency=low

  * initial version

 -- Max Kellermann <max@duempel.org>  Wed, 14 Dec 2005 23:32:35 +0100
