@@ -7,6 +7,7 @@ uoproxy (0.1.1) unstable; urgency=low
   * bugfix: serials are in network byte order
   * read equipment list from mobile_incoming packet
   * handle container packets: open, update, content
+  * delete all child objects when an entity is deleted
 
  --
 
